
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="3"
    android:background="#bc6fa5"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.appers.ayvaz.calcyoulater.MainActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:weightSum="3"
        android:background="#4d3dbc"
        android:layout_margin="5dp"

        tools:context="com.appers.ayvaz.calcyoulater.MainActivity">


        <TextView
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="40dp"
            android:id="@+id/screen" />

    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="2"
        android:weightSum="4"
        android:background="#73bc79"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.appers.ayvaz.calcyoulater.MainActivity">


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:weightSum="4"
            android:background="#73bc79"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="com.appers.ayvaz.calcyoulater.MainActivity">

            <Button
                android:id="@+id/one"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/one"
                android:layout_margin="3dp"
                android:background="#bc6e5d" />
            <Button
                android:id="@+id/four"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/four"
                android:layout_margin="3dp"
                android:background="#bc6e5d" />
            <Button
                android:id="@+id/seven"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/seven"
                android:layout_margin="3dp"
                android:background="#bc6e5d" />
            <Button
                android:id="@+id/clear_all"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/clear_all"
                android:layout_margin="3dp"
                android:background="#bc6e5d" />

        </LinearLayout>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:weightSum="4"
            android:background="#73bc79"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="com.appers.ayvaz.calcyoulater.MainActivity">

            <Button
                android:id="@+id/two"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/two"
                android:layout_margin="3dp"
                android:background="#bc6e5d" />
            <Button
                android:id="@+id/five"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/five"
                android:layout_margin="3dp"
                android:background="#bc6e5d" />
            <Button
                android:id="@+id/eight"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/eight"
                android:layout_margin="3dp"
                android:background="#bc6e5d" />
            <Button
                android:id="@+id/zero"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/zero"
                android:layout_margin="3dp"
                android:background="#bc6e5d" />

        </LinearLayout>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:weightSum="4"
            android:background="#73bc79"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="com.appers.ayvaz.calcyoulater.MainActivity">

            <Button
                android:id="@+id/three"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/three"
                android:layout_margin="3dp"
                android:background="#bc6e5d" />
            <Button
                android:id="@+id/six"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/six"
                android:layout_margin="3dp"
                android:background="#bc6e5d" />
            <Button
                android:id="@+id/nine"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/nine"
                android:layout_margin="3dp"
                android:background="#bc6e5d" />
            <Button
                android:id="@+id/clear"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/clear"
                android:layout_margin="3dp"
                android:background="#bc6e5d" />

        </LinearLayout>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:weightSum="5"
            android:background="#73bc79"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="com.appers.ayvaz.calcyoulater.MainActivity">

            <Button
                android:id="@+id/plus"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/add"
                android:layout_margin="3dp"
                android:background="#bc6e5d" />
            <Button
                android:id="@+id/minus"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/subtract"
                android:layout_margin="3dp"
                android:background="#bc6e5d" />
            <Button
                android:id="@+id/divide"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/divide"
                android:layout_margin="3dp"
                android:background="#bc6e5d" />
            <Button
                android:id="@+id/modulus"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/modulus"
                android:layout_margin="3dp"
                android:background="#bc6e5d" />
            <Button
                android:id="@+id/equals"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/equals"
                android:layout_margin="3dp"
                android:background="#bc6e5d" />

        </LinearLayout>



    </LinearLayout>
</LinearLayout>
